--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "uptime-status",
   "version": "1.0.0",
   "private": true,
-  "author": "JLinmr",
-  "url": "https://www.bsgun.cn",
-  "email": "ruoms@qq.com",
+  "author": "Jie",
+  "url": "https:/tjqaq.com",
+  "email": "2115438238@qq.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/JLinmr/Uptime-Status"
+    "url": "https://github.com/xingstar520/Uptime-Status"
   },
   "type": "module",
   "scripts": {
