--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "author": "Jie",
-  "url": "https:/tjqaq.com",
+  "url": "https://tjqaq.com",
   "email": "2115438238@qq.com",
   "repository": {
     "type": "git",
